# rust-oidc-provider

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  config.toml  docker-compose.yml  generate_entities.sh  requests.http
.github/workflows/: rust.yml
admin/: Cargo.toml  build.rs
admin/proto/: admin.proto
admin/src/: interaction.rs  lib.rs
axum/: Cargo.toml
axum-session/: Cargo.toml
axum-session/src/: cookie.rs  lib.rs
axum/src/: server.rs
core/: Cargo.toml
core/src/: access_token.rs  adapter.rs  authorisation_code.rs  authorisation_request.rs  claims.rs  client.rs  client_auth.rs  client_credentials.rs  context.rs  error.rs  hash.rs  id_token.rs  id_token_builder.rs  jwt.rs  keystore.rs  lib.rs  pairwise.rs  persistence.rs  profile.rs  request_object.rs  session.rs  token_resolver.rs  user.rs  userinfo.rs  utils.rs
core/src/adapter/: client_adapter.rs  code_adapter.rs  generic_adapter.rs  interaction_adapter.rs  user_adapter.rs
core/src/configuration/: adapter_container.rs  claims.rs  clock.rs  credentials.rs  mod.rs  mtls.rs  pkce.rs  profile.rs  provider.rs  request_object.rs  routes.rs  ttl.rs
core/src/grant_type/: authorization_code.rs  client_credentials.rs  mod.rs  refresh_token.rs
core/src/manager/: access_token_manager.rs  auth_code_manager.rs  grant_manager.rs  interaction_manager.rs  mod.rs  refresh_token_manager.rs  user_manager.rs
core/src/models/: access_token.rs  authorisation_code.rs  client.rs  grant.rs  mod.rs  refresh_token.rs  token.rs
core/src/prompt/: checks.rs  consent.rs  login.rs  mod.rs  none.rs
core/src/response_mode/: encoder.rs  error.rs  mod.rs
core/src/response_mode/encoder/: fragment.rs  jwt.rs  query.rs
core/src/response_type/: errors.rs  mod.rs  resolver.rs
core/src/response_type/resolver/: code.rs  code_id_token.rs  code_id_token_token.rs  code_token.rs  id_token.rs  id_token_token.rs  token.rs
core/src/services/: authorisation.rs  interaction.rs  introspect_service.rs  keystore.rs  mod.rs  prompt.rs  token.rs  types.rs  userinfo.rs
example/: Cargo.toml
example/src/: main.rs  profile.rs
example/static/assets/css/: consent.css
example/static/pages/: consent.html  login.html
oidc-actix/: Cargo.toml
oidc-actix/src/: configure.rs  extractor.rs  extractors.rs  lib.rs  main.rs  server.rs  session.rs
oidc-actix/src/routes/: authorisation.rs  error.rs  interaction.rs  mod.rs
oidc-axum/: Cargo.toml
oidc-axum/src/: configure.rs  extractors.rs  lib.rs  middleware.rs  server.rs
oidc-axum/src/routes/: authorisation.rs  error.rs  interaction.rs  mod.rs
oidc-configuration/: Cargo.toml
oidc-configuration/src/: configuration.rs  error.rs  lib.rs
oidc-core/: Cargo.toml
oidc-core/src/: access_token.rs  adapter.rs  authentication_request.rs  authorisation.rs  authorisation_code.rs  authorisation_request.rs  client.rs  context.rs  hash.rs  id_token.rs  lib.rs  main.rs  session.rs  state.rs
oidc-core/src/adapter/: client_adapter.rs  code_adapter.rs  interaction_adapter.rs
oidc-core/src/configuration/: adapter_container.rs  configuration.rs  interaction.rs  mod.rs  provider.rs  routes.rs
oidc-core/src/response_mode/: encoder.rs  errors.rs
oidc-core/src/response_mode/encoder/: fragment.rs  jwt.rs  query.rs
oidc-core/src/response_type/: authorisation_response.rs  errors.rs  mod.rs  resolver.rs  url_encodable.rs
oidc-core/src/response_type/resolver/: code.rs  code_id_token.rs  id_token.rs
oidc-core/src/services/: authorisation.rs  interaction.rs  mod.rs
oidc-example/: Cargo.toml
oidc-example/src/: main.rs
oidc-example/static/assets/css/: login.css
oidc-example/static/pages/: login.html
oidc-types/: Cargo.toml
oidc-types/src/: auth_method.rs  authentication_request.rs  claim_type.rs  discovery.rs  grant.rs  grant_type.rs  hash.rs  issuer.rs  jws.rs  lib.rs  pkce.rs  prompt.rs  response_mode.rs  response_type.rs  state.rs  subject.rs  subject_type.rs  url_encodable.rs  utils.rs
oidc-types/src/client/: info.rs  mod.rs
oidc-types/src/jose/: algorithm.rs  error.rs  jwk_set.rs  jws.rs  jwt.rs  mod.rs
oidc-types/src/scopes/: macros.rs  mod.rs  serde.rs  types.rs
persistence-orm/: Cargo.toml
persistence-orm/migration/: Cargo.toml
persistence-orm/migration/src/: lib.rs  m20240122_205256_create_client_information.rs  m20240122_205432_create_grant.rs  m20240122_205439_create_authorization_code.rs  m20240122_205712_create_token.rs  m20240122_210013_create_authenticated_user.rs  m20240123_010404_create_interaction.rs  macros.rs  main.rs  models.rs
persistence-orm/src/: adapter.rs  lib.rs  repository.rs  utils.rs
persistence-orm/src/entities/: authenticated_user.rs  authorisation_code.rs  authorization_code.rs  client_information.rs  grant.rs  interaction.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  token.rs
persistence-orm/src/repository/: access_token.rs  authenticated_user.rs  authorisation_code.rs  client.rs  grant.rs  interaction.rs  refresh_token.rs
server/: Cargo.toml
server/src/: authenticated_request.rs  credentials.rs  extractors.rs  lib.rs  middleware.rs  server.rs  state.rs
server/src/routes/: authorisation.rs  discovery.rs  error.rs  interaction.rs  introspect.rs  jwks.rs  mod.rs  token.rs  userinfo.rs
types/: Cargo.toml
types/src/: access_token.rs  acr.rs  amr.rs  application_type.rs  auth_method.rs  authorisation_code.rs  certificate.rs  claim_type.rs  claims.rs  client_credentials.rs  code.rs  discovery.rs  grant.rs  grant_type.rs  hash.rs  hashed_secret.rs  id_token.rs  identifiable.rs  introspection.rs  issuer.rs  lib.rs  nonce.rs  password_hasher.rs  pkce.rs  prompt.rs  refresh_token.rs  response_mode.rs  response_type.rs  secret.rs  simple_id_token.rs  state.rs  subject.rs  subject_type.rs  token.rs  token_request.rs  url_encodable.rs  userinfo.rs  utils.rs
types/src/client/: encryption.rs  info.rs  mod.rs
types/src/jose/: algorithm.rs  error.rs  jwk_ext.rs  jwk_set.rs  jws.rs  jwt.rs  jwt2.rs  mod.rs
types/src/jose/jwe/: alg.rs  enc.rs  mod.rs
types/src/scopes/: mod.rs  serde.rs  types.rs
