[workspace]
resolver = "2"
members = [
    "server",
    "types",
    "core",
    "example",
    "admin"
]

[workspace.dependencies]
uuid = "1.6.1"
serde = "1.0.193"
tokio = "1.35.1"
serde_with = "3.4.0"
axum = "0.7.2"
hyper = "1.1.0"
tower = "0.4.13"
tower-http = "0.5.0"
time = "0.3.31"
url = "2.5.0"
async-trait = "0.1.74"
futures = "0.3.29"
anyhow = "1.0.75"
thiserror = "1.0.51"
tracing = "0.1.40"
base64 = "0.21.5"
urlencoding = "2.1.3"
lazy_static = "1.4.0"
serde_json = "1.0.108"
josekit = "0.8.4"
sha2 = "0.10.8"
indexmap = "2.1.0"
derive_builder = "0.12.0"
getset = "0.1.2"