[workspace]
resolver = "2"
members = [
  "server",
  "types",
  "core",
  "example",
  "admin",
  "persistence-orm/migration",
  "persistence-orm",
]

[workspace.dependencies]
uuid = "1.8.0"
serde = "1.0.198"
tokio = "1.37.0"
serde_with = "3.8.0"
axum = "0.7.5"
hyper = "1.3.1"
tower = "0.4.13"
tower-http = "0.5.2"
time = "0.3.36"
url = "2.5.0"
async-trait = "0.1.80"
futures = "0.3.30"
anyhow = "1.0.82"
thiserror = "1.0.59"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
base64 = "0.22.0"
urlencoding = "2.1.3"
lazy_static = "1.4.0"
serde_json = "1.0.116"
josekit = "0.8.6"
sha2 = "0.10.8"
indexmap = "2.2.6"
derive_builder = "0.20.0"
getset = "0.1.2"
quick_cache = "0.5.1"
dashmap = "5.5.3"
x509-parser = "0.16.0"
mockall = "0.12.1"
