[package]
name = "oidc-admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oidc-core = { path = "../core" }
oidc-types = { path = "../types" }
tonic = "0.9.2"
prost = "0.11.9"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
thiserror = "1.0.44"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
time = "0.3.26"
tracing = "0.1.37"

[build-dependencies]
tonic-build = "0.9.2"
