[package]
name = "oidc-admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oidc-core = { path = "../core" }
oidc-types = { path = "../types" }
tonic = "0.11.0"
prost = "0.12.4"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
time = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
tonic-build = "0.11.0"
