[package]
name = "axum-session"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.4.5", features = ["headers"] }
axum-extra = "0.1.2"
hyper = { version = "0.14.17", features = ["full"] }
tokio = { version = "1.16.1", features = ["full"] }
tower = "0.4.11"
cookie = { version = "0.16.0", features = ["secure", "percent-encode"] }
serde = { version = "1.0.136" }
serde_json = "1.0.79"
log = "0.4.14"
thiserror = "1.0.30"
time = "0.3.7"
futures = "0.3.21"
async-trait = "0.1.52"