[package]
name = "oidc-core"
version = "0.1.0"
authors = ["Bruno Ortiz <brunortiz11@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oidc-types = { path = "../types" }
serde = { version = "<=1.0.171", features = ["derive"] }
serde_json = "1.0.104"
url = { version = "2.4.0", features = ["serde"] }
form_urlencoded = "1.2.0"
josekit = "0.8.3"
anyhow = "1.0.72"
thiserror = "1.0.44"
time = { version = "0.3.26" }
base64 = "0.21.2"
sha2 = "0.10.7"
async-trait = "0.1.72"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
tokio = { version = "1.29.1", features = ["full"] }
futures = "0.3.28"
indexmap = "2.0.0"
derive_builder = "0.12.0"
getset = "0.1.2"
tracing = "0.1.37"
reqwest = { version = "0.11.18", features = ["json"] }
once_cell = "1.18.0"
cached = "0.44.0"
itertools = "0.11.0"
