[package]
name = "oidc-core"
version = "0.1.0"
authors = ["Bruno Ortiz <brunortiz11@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oidc-types = { path = "../types" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
url = { workspace = true, features = ["serde"] }
form_urlencoded = "1.2.1"
josekit = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
derive_builder = { workspace = true }
getset = { workspace = true }
tracing = { workspace = true }
reqwest = { version = "0.12.3", features = ["json"] }
once_cell = "1.19.0"
itertools = "0.12.1"
quick_cache = { workspace = true }
dashmap = { workspace = true }
derive-new = "0.6.0"
x509-parser = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
mockall = { workspace = true }
