[package]
name = "oidc-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oidc-server = { path = "../server" }
oidc-core = { path = "../core" }
oidc-types = { path = "../types" }
oidc-admin = { path = "../admin" }
axum = { version = "0.6.19", features = ["form"] }
hyper = { version = "0.14.27", features = ["full"] }
tokio = { version = "1.29.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.3", features = ["fs"] }
tera = "1.19.0"
time = "0.3.26"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
serde = { version = "<=1.0.171" }
serde_json = "1.0.104"
lazy_static = "1.4.0"
urlencoding = "2.1.3"

[dev-dependencies]
axum-macros = "0.3.8"
