[package]
name = "oidc-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oidc-server = { path = "../server" }
oidc-core = { path = "../core" }
oidc-types = { path = "../types" }
oidc-admin = { path = "../admin" }
oidc-persistence = { path = "../persistence-orm", features = ["mysql"] }
axum = { workspace = true }
hyper = { workspace = true, features = ["full"] }
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["fs"] }
tera = "1.19.1"
time = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3.18"
serde = { workspace = true }
serde_json = { workspace = true }
lazy_static = { workspace = true }
urlencoding = { workspace = true }

[dev-dependencies]
axum-macros = "0.4.1"
