[package]
name = "oidc-actix"
version = "0.1.0"
authors = ["bruno-ortiz <brunortiz11@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
josekit="0.7.4"
oidc-core = { path = "../oidc-core" }
oidc-types = { path = "../oidc-types" }
