[package]
name = "oidc-axum"
version = "0.1.0"
authors = ["bruno-ortiz <brunortiz11@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oidc-core = { path = "../oidc-core" }
oidc-types = { path = "../oidc-types" }
axum = { version = "0.4.5", features = ["headers"] }
hyper = { version = "0.14.17", features = ["full"] }
tokio = { version = "1.16.1", features = ["full"] }
uuid = { version = "0.8.2", features = ["v4", "serde"] }
serde = { version = "1.0.136", features = ["derive"] }
tower-http = { version = "0.2.3", features = ["fs", "add-extension", "util"] }
tower = "0.4.12"
tower-cookies = { version = "0.5.0", features = ["signed"] }
cookie = { version = "0.16.0", features = ["key-expansion"] }
async-trait = "0.1.52"
futures = "0.3.21"
anyhow = "1.0.53"
thiserror = "1.0.30"
time = "0.3.7"
