[package]
name = "oidc-configuration"
version = "0.1.0"
authors = ["Bruno Ortiz <brunortiz11@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.8"
serde = { version = "1.0.126", features = ["derive"] }