[package]
name = "oidc-core"
version = "0.1.0"
authors = ["Bruno Ortiz <brunortiz11@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oidc-types = { path = "../oidc-types" }
serde = { version = "1.0.136", features = ["derive"] }
url = { version = "2.2.2", features = ["serde"] }
form_urlencoded = "1.0.1"
josekit = "0.7.4"
anyhow = "1.0.53"
thiserror = "1.0.30"
chrono = { version = "0.4.19", features = ["serde"] }
base64 = "0.13.0"
sha2 = "0.10.0"
async-trait = "0.1.52"
uuid = { version = "0.8.2", features = ["v4", "serde"] }