[package]
name = "oidc-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oidc-actix = { path = "../oidc-actix" }
oidc-core = { path = "../oidc-core" }
oidc-types = { path = "../oidc-types" }
actix-web = "4.0.0-rc.3"
actix-session = "0.5.0-beta.8"
actix-files = "0.6.0-beta.16"
env_logger = "0.9.0"
tera = "1.15.0"