[package]
name = "oidc-types"
version = "0.1.0"
authors = ["bruno-ortiz <brunortiz11@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
url = { version = "2.2.2", features = ["serde"] }
regex = "1.5.4"
lazy_static = "1.4.0"
josekit = { version = "0.7.4" }
chrono = { version = "0.4.19", features = ["serde"] }
uuid = { version = "0.8.2", features = ["v4", "serde"] }
serde_json = "1.0.71"
base64 = "0.13.0"
thiserror = "1.0.30"
indexmap = "1.8.0"