[package]
name = "oidc-server"
version = "0.1.0"
authors = ["bruno-ortiz <brunortiz11@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oidc-core = { path = "../core" }
oidc-types = { path = "../types" }
oidc-admin = { path = "../admin" }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
serde = { version = "<=1.0.171", features = ["derive"] }
serde_urlencoded = "0.7.1"
serde_with = "3.1.0"
axum = { version = "0.6.19", features = ["headers", "form"] }
hyper = { version = "0.14.27", features = ["full"] }
tokio = { version = "1.29.1", features = ["full"] }
tower-http = { version = "0.4.3", features = [
    "fs",
    "add-extension",
    "util",
    "trace",
] }
tower = "0.4.13"
tower-cookies = { version = "0.9.0", features = ["signed"] }
url = "2.4.0"
cookie = { version = "0.17.0", features = ["key-expansion"] }
async-trait = "0.1.72"
futures = "0.3.28"
anyhow = "1.0.72"
thiserror = "1.0.44"
time = "0.3.23"
tracing = "0.1.37"
base64 = "0.21.2"
urlencoding = "2.1.3"

[dev-dependencies]
axum-macros = "0.3.8"
