[package]
name = "oidc-server"
version = "0.1.0"
authors = ["bruno-ortiz <brunortiz11@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oidc-core = { path = "../core" }
oidc-types = { path = "../types" }
oidc-admin = { path = "../admin" }
uuid = { workspace = true, features = ["v4", "serde"] }
serde = { workspace = true, features = ["derive"] }
serde_urlencoded = "0.7.1"
serde_with = { workspace = true }
axum = { workspace = true }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
hyper = { workspace = true, features = ["full"] }
tokio = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = [
  "fs",
  "add-extension",
  "util",
  "trace",
] }
tower = { workspace = true }
tower-cookies = { version = "0.10.0", features = ["signed"] }
url = { workspace = true }
cookie = { version = "0.18.1", features = ["key-expansion"] }
async-trait = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
urlencoding = { workspace = true }
axum-macros = "0.4.1"
x509-parser = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
http-body-util = "0.1.1"
serde_json = { workspace = true }
mockall = { workspace = true }
