[package]
name = "oidc-types"
version = "0.1.0"
authors = ["bruno-ortiz <brunortiz11@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.160", features = ["derive"] }
url = { version = "2.3.1", features = ["serde"] }
regex = "1.7.3"
lazy_static = "1.4.0"
josekit = { version = "0.8.2" }
time = { version = "0.3.20", features = ["serde-human-readable"] }
uuid = { version = "1.3.1", features = ["v4", "serde"] }
serde_json = "1.0.96"
serde_with = "2.3.2"
base64 = "0.21.0"
thiserror = "1.0.40"
anyhow = "1.0.70"
indexmap = "1.9.3"
derive_builder = "0.12.0"
getset = "0.1.2"
derive_more = { version = "0.99.17" }
rand = "0.8.5"
sha2 = "0.10.6"
tracing = "0.1.37"
encoding = "0.2.33"
