[package]
name = "oidc-types"
version = "0.1.0"
authors = ["bruno-ortiz <brunortiz11@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true, features = ["derive"] }
url = { workspace = true, features = ["serde"] }
regex = "1.10.3"
lazy_static = { workspace = true }
josekit = { workspace = true }
time = { workspace = true, features = ["serde-human-readable"] }
uuid = { workspace = true, features = ["v4", "serde"] }
serde_json = { workspace = true }
serde_with = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
indexmap = { workspace = true }
derive_builder = { workspace = true }
getset = { workspace = true }
derive_more = { version = "0.99.17" }
rand = "0.8.5"
sha2 = { workspace = true }
tracing = { workspace = true }
encoding = "0.2.33"
x509-parser = { workspace = true }
